# hortela

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: account.rs  ledger.rs  lexer.rs  lib.rs  money.rs  parser.rs  syntax.rs  utils.rs  validate.rs
src/syntax/: lexer.rs  mod.rs  parser.rs
src/validate/: mod.rs  runner.rs
test_cases/: 01-index.hortela  01-index.hta
